--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-/vendor
+vendor/bundle
+.ruby-version
 
 # Ignore bundler config.
 /.bundle
@@ -21,3 +22,7 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+.project
+.DS_Store
+.idea
